horizontal scrolling fixed

--- a/style.css
+++ b/style.css
@@ -176,6 +176,7 @@ html {
   scroll-padding-top: var(--header-height);
   font-size: 100%;
   -webkit-text-size-adjust: 100%;
+  overflow-x: hidden;
 }
 
 @media (prefers-reduced-motion: reduce) {
